fix notes spacing, and change profile to config

--- a/scss/manager.scss
+++ b/scss/manager.scss
@@ -305,7 +305,7 @@ a {
     font-size: $font-size;
     border-radius: 2px;
     height: 30px !important;
-    line-height: 30px;
+    line-height: 12px;
 }
 
 input, .btn {
